--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -71,5 +72,6 @@
 
     setInterval(updateCountdown, 1000);
     updateCountdown();
-  </script></body>
+  </script>
+</body>
 </html>
