--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Countdown to You 💖</title>
   <style>
     body {
-      background: url('https://drive.google.com/file/d/1XPc2qOq1EEmie5DNZ6NJaHtUhtpggLjF/view?usp=sharing') no-repeat center center fixed;
+      background: url('images/Suree.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
