--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <style>
     body {
       background: url('images/Suree.jpg') no-repeat center center fixed;
+      background-position: center top;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
       background-size: cover;
       color: white;
       text-align: center;
