--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <title> Miss You 💖</title>
   <style>
     body {
-      background: url('images/Suree.jpg') no-repeat center center fixed;
-      background-position: center top;
-      background-attachment: fixed;
-      background-repeat: no-repeat;
+      background: url('https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
